Compiler/test_inputs/valid/03_expr_stmt_tl_call.mt
@triton.jit
def load_kernel(x): {
  tl.load(x);
}
