Compiler/test_inputs/invalid/06_invalid_statement_type.mt
@triton.jit
def bad_stmt(x): {
  { y = x + 1; }
}
